-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P1
-
Affects Version/s: 16
-
Component/s: hotspot
-
b17
src/hotspot/share/classfile/vmIntrinsics.cpp: In static member function 'static void vmIntrinsics::verify_method(vmIntrinsics::ID, Method*)':
hotspot/share/classfile/vmIntrinsics.cpp:838:7: error: 'xtty' was not declared in this scope
if (xtty != NULL) {
^~~~
/jdk2/neo/open/src/hotspot/share/classfile/vmIntrinsics.cpp:838:7: note: suggested alternative: 'tty'
if (xtty != NULL) {
^~~~
tty
hotspot/share/classfile/vmIntrinsics.cpp:838:7: error: 'xtty' was not declared in this scope
if (xtty != NULL) {
^~~~
/jdk2/neo/open/src/hotspot/share/classfile/vmIntrinsics.cpp:838:7: note: suggested alternative: 'tty'
if (xtty != NULL) {
^~~~
tty
- is cloned by
-
JDK-8253314 precompiled.hpp missing from vmIntrinsics.cpp
-
- Resolved
-
- relates to
-
JDK-8243066 move VM_INTRINSICS_DO into its own vmIntrinsics.hpp file
-
- Resolved
-