8253313: xmlstream.hpp missing from vmIntrinsics.cpp

Reviewed-by: mikael